# all-isbns

./: .gitignore  Makefile  README.md  index.html  pyproject.toml  requirements.txt
data/: isbn_agencies.json  manifest.json
data/isbn_publishers/: 0000.json  006450693.json  006454364.json  006458056.json  006483152.json  006487226.json  007190.json  0085458.json  0087602.json  00900061.json  00902198.json  00904431.json  00906761.json  00909505.json  00912251.json  00915161.json  00918048.json  00920516.json  00923070.json  00925925.json  00928839.json  00931728.json  00934640.json  00937518.json  00940429.json  00943306.json  00946229.json  00949085.json  009501892.json  009504874.json  009507925.json  009510990.json  009514107.json  009517299.json  009520505.json  009523799.json  009527122.json  009530526.json  009533844.json  009537129.json  (+707 more)
js/: PointerInputHandler.js  Transform.js  ViewportController.js  ViewportResizeObserver.js  main_old.js
scripts/: common.py  create_manifest.py  extract_agencies.py  extract_publishers.py  isbn_filter.py  isbn_props_decoder.py  plot.py  plot_agencies.py  plot_allocations.py  plot_publishers.py  processor_data_handler.py  processor_main.py  processor_main_chunks.py  processor_most_likely_year.py  processor_split_finder.py  processor_worker.py  render_tile_props.py  render_tile_sets.py
tools/: analyze_worldcat.py  jsonl_browser.py
web/: PointerInputHandler.js  Transform.js  ViewportController.js  index.html  styles.css
web/js/: main.js  wrapMonospaceText.js
